manifests/use-cases-common-default-ns/05-canary-traffic-split/dp-canary-myapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v1
  template:
    metadata:
      labels:
        app: my-app
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: app-v1-html
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: my-app
spec:
  selector:
    app: my-app
    version: v1
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2
  template:
    metadata:
      labels:
        app: my-app
        version: v2
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: app-v2-html
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2
  namespace: my-app
spec:
  selector:
    app: my-app
    version: v2
  ports:
    - port: 80
      targetPort: 80
---
