manifests/use-cases-common-default-ns/05-canary-traffic-split/htr-traffic-split.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-traffic-splitting
spec:
  parentRefs:
    - name: canary-deployment-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app-v1
          namespace: my-app
          port: 80
          weight: 80
        - name: app-v2
          namespace: my-app
          port: 80
          weight: 20
